[gd_scene load_steps=7 format=2]

[ext_resource path="res://characters/bullet_generator.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/enemy.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]
resource_name = "StartMove"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.297302, 0.196146 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 50 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.1
step = 0.05

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 5, 3, 0 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 75.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 50.0
color = Color( 0.956863, 0.0156863, 0.0156863, 1 )

[node name="Enemy" type="RigidBody2D"]
collision_layer = 4
collision_mask = 3
mode = 1
script = ExtResource( 4 )
RUN_SPEED = 1.0
HP = 100.0
TYPE = "Melee"
amount_to_move = 75.0
move_period = 2.0
generator_scripts = "spinning6"

[node name="CanvasModulate" type="CanvasModulate" parent="."]
modulate = Color( 1, 84.89, 1, 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -8.0
margin_top = -8.0
margin_right = 15.0
margin_bottom = 13.0
rect_scale = Vector2( 0.695522, 0.759719 )
color = Color( 0.619608, 0.0941176, 0.0941176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "StartMove"
anims/StartMove = SubResource( 2 )
"anims/take damage" = SubResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
emitting = false
amount = 5
one_shot = true
explosiveness = 0.8
process_material = SubResource( 4 )

[node name="Generators" type="Node2D" parent="."]

[node name="BulletGenerator" parent="Generators" instance=ExtResource( 1 )]

[node name="BulletGenerator2" parent="Generators" instance=ExtResource( 1 )]
DEBUG = true

[node name="StartMove" type="Tween" parent="."]
[connection signal="tween_all_completed" from="StartMove" to="." method="_on_StartMove_tween_all_completed"]
